# fractals-explorer

./: .gitignore  CMakeLists.txt  Fractals.cpp  Fractals.h  README.md  Settings.h  SettingsPanel.cpp  SettingsPanel.h  Tab.cpp  Tab.h  main.cpp
